# shape_your_arms

./: .gitignore  README.md
client/: workflow.txt
client/godot/: MainScene.tscn  PlayerScene.tscn  button.gd  godot-rust.png.import  main_scene.tscn  player.tscn  project.godot
client/godot/assets/: frame1.png.import  frame2.png.import
client/godot/main_menu/: main_menu.tscn
client/godot/networking/: message_types.gd  message_types.gd.uid  network_client.gd  network_client.tscn  network_manager.gd  network_manager.gd.uid  network_manager.tscn  networking_manager.gd.uid  networnk_manager.gd  networnk_manager.gd.uid
client/godot/scenes/: main_scene.tscn  network_manager.tscn  (+1 more)
client/rust/: Cargo.toml
client/rust/src/: lib.rs  player.rs
client/rust/src/entities/: bullet.rs  mod.rs  player.rs
client/rust/src/entities/signals_data/: base_signal_message.rs  mod.rs  on_player_moved_data.rs
client/rust/src/main_game/: game_world_manager.rs  input_controller.rs  main_game_ui.rs  mod.rs
client/rust/src/main_menu/: main_menu.rs
client/rust/src/network/: meters_pixels_converter.rs  mod.rs  network_client.rs  network_manager.rs
client/rust/src/network/messages/: bullet_data.rs  bullet_parser.rs  message_type.rs  mod.rs  player_data.rs  player_parser.rs
client/rust/src/network/server_data_parse/: server_data_enum.rs
client/rust/src/utils/: mod.rs  serializable_vector2.rs  transform.rs
godot/: hello.gdextension.uid  icon.svg.import  icon.tscn  project.godot
rust/: Cargo.toml
rust/src/: player.rs
server/: audit_log.csv  pom.xml  shape_your_arms.db
(+94 files in other folders)
