[package]
name = "rust"
version = "0.1.0"
rust-version = "1.85"
edition = "2024"
license = "MPL-2.0"
publish = false

[lib]
crate-type = ["cdylib"]  # Compile this crate to a dynamic C library.

[dependencies]
godot = { git = "https://github.com/godot-rust/gdext.git" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
